kubernetes/components/httpscaler/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ${APP}
spec:
  hostnames:
    - ${HTTP_HOST}
  parentRefs:
    - name: ${GATEWAY:=envoy-internal}
      namespace: network
  rules:
    - backendRefs:
        - name: keda-add-ons-http-interceptor-proxy
          namespace: observability
          port: 8080
